--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
-.navbar{
 
-    background-attachment: fixed;
-   
-    
-}
 body{
     display: flex;
     background-image: url(background1.webp);
     background-size: cover;
-    background-position: center;
+    position: fixed;
     height: 100vh;
+    background-repeat: no-repeat;
 
 }
 
