--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     display: flex;
     background-image: url(background1.webp);
     background-size: cover;
-    position: fixed;
+    position: relative;
     height: 100vh;
     background-repeat: no-repeat;
 
